build/log/idf_py_stdout_output_353823
[1/11] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
/home/malaika/esp/esp-idf/myprojects/Esp32 Course/Internet Connection/wifi/main/main.c: In function 'app_main':
/home/malaika/esp/esp-idf/myprojects/Esp32 Course/Internet Connection/wifi/main/main.c:9:13: warning: unused variable 'err' [-Wunused-variable]
    9 |   esp_err_t err = wifi_connect_sta("Malaika", "81313mmh", 10000);
      |             ^~~
[2/11] Performing build step for 'bootloader'
[1/1] cd "/home/malaika/esp/esp-idf/myprojects/Esp32 Course/Internet Connection/wifi/build/bootloader/esp-idf/esptool_py" && /home/malaika/.espressif/python_env/idf5.3_py3.10_env/bin/python /home/malaika/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/malaika/esp/esp-idf/myprojects/Esp32\ Course/Internet\ Connection/wifi/build/bootloader/bootloader.bin
Bootloader binary size 0x6720 bytes. 0x8e0 bytes (8%) free.
[3/9] Building C object esp-idf/wifi_connect/CMakeFiles/__idf_wifi_connect.dir/wifi_connect.c.obj
FAILED: esp-idf/wifi_connect/CMakeFiles/__idf_wifi_connect.dir/wifi_connect.c.obj 
/home/malaika/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20240530/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.3.1-2-g45e16ce154-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I"/home/malaika/esp/esp-idf/myprojects/Esp32 Course/Internet Connection/wifi/build/config" -I"/home/malaika/esp/esp-idf/myprojects/Esp32 Course/Internet Connection/wifi/components/wifi_connect" -I/home/malaika/esp/esp-idf/components/newlib/platform_include -I/home/malaika/esp/esp-idf/components/freertos/config/include -I/home/malaika/esp/esp-idf/components/freertos/config/include/freertos -I/home/malaika/esp/esp-idf/components/freertos/config/xtensa/include -I/home/malaika/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/malaika/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/malaika/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/malaika/esp/esp-idf/components/freertos/esp_additions/include -I/home/malaika/esp/esp-idf/components/esp_hw_support/include -I/home/malaika/esp/esp-idf/components/esp_hw_support/include/soc -I/home/malaika/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/malaika/esp/esp-idf/components/esp_hw_support/dma/include -I/home/malaika/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/malaika/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/malaika/esp/esp-idf/components/esp_hw_support/port/esp32/include -I/home/malaika/esp/esp-idf/components/heap/include -I/home/malaika/esp/esp-idf/components/log/include -I/home/malaika/esp/esp-idf/components/soc/include -I/home/malaika/esp/esp-idf/components/soc/esp32 -I/home/malaika/esp/esp-idf/components/soc/esp32/include -I/home/malaika/esp/esp-idf/components/hal/platform_port/include -I/home/malaika/esp/esp-idf/components/hal/esp32/include -I/home/malaika/esp/esp-idf/components/hal/include -I/home/malaika/esp/esp-idf/components/esp_rom/include -I/home/malaika/esp/esp-idf/components/esp_rom/include/esp32 -I/home/malaika/esp/esp-idf/components/esp_rom/esp32 -I/home/malaika/esp/esp-idf/components/esp_common/include -I/home/malaika/esp/esp-idf/components/esp_system/include -I/home/malaika/esp/esp-idf/components/esp_system/port/soc -I/home/malaika/esp/esp-idf/components/esp_system/port/include/private -I/home/malaika/esp/esp-idf/components/xtensa/esp32/include -I/home/malaika/esp/esp-idf/components/xtensa/include -I/home/malaika/esp/esp-idf/components/xtensa/deprecated_include -I/home/malaika/esp/esp-idf/components/lwip/include -I/home/malaika/esp/esp-idf/components/lwip/include/apps -I/home/malaika/esp/esp-idf/components/lwip/include/apps/sntp -I/home/malaika/esp/esp-idf/components/lwip/lwip/src/include -I/home/malaika/esp/esp-idf/components/lwip/port/include -I/home/malaika/esp/esp-idf/components/lwip/port/freertos/include -I/home/malaika/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/malaika/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/malaika/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/malaika/esp/esp-idf/components/esp_netif/include -I/home/malaika/esp/esp-idf/components/esp_event/include -I/home/malaika/esp/esp-idf/components/esp_wifi/include -I/home/malaika/esp/esp-idf/components/esp_wifi/wifi_apps/include -I/home/malaika/esp/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -I/home/malaika/esp/esp-idf/components/esp_wifi/include/local -I/home/malaika/esp/esp-idf/components/esp_phy/include -I/home/malaika/esp/esp-idf/components/esp_phy/esp32/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap "-fmacro-prefix-map=/home/malaika/esp/esp-idf/myprojects/Esp32 Course/Internet Connection/wifi=." -fmacro-prefix-map=/home/malaika/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/wifi_connect/CMakeFiles/__idf_wifi_connect.dir/wifi_connect.c.obj -MF esp-idf/wifi_connect/CMakeFiles/__idf_wifi_connect.dir/wifi_connect.c.obj.d -o esp-idf/wifi_connect/CMakeFiles/__idf_wifi_connect.dir/wifi_connect.c.obj -c '/home/malaika/esp/esp-idf/myprojects/Esp32 Course/Internet Connection/wifi/components/wifi_connect/wifi_connect.c'
/home/malaika/esp/esp-idf/myprojects/Esp32 Course/Internet Connection/wifi/components/wifi_connect/wifi_connect.c: In function 'event_handler':
/home/malaika/esp/esp-idf/myprojects/Esp32 Course/Internet Connection/wifi/components/wifi_connect/wifi_connect.c:42:17: error: implicit declaration of function 'esp_wifi_connnect'; did you mean 'esp_wifi_connect'? [-Werror=implicit-function-declaration]
   42 |                 esp_wifi_connnect();
      |                 ^~~~~~~~~~~~~~~~~
      |                 esp_wifi_connect
cc1: some warnings being treated as errors
ninja: build stopped: subcommand failed.
